@startuml

title __JAVAPROJECTTEMPLATE's Class Diagram__\n

  namespace edu.bu.met.cs665 {
    interface edu.bu.met.cs665.AttackBehavior {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Bandits {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.BanditsAttack {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.BanditsScavenge {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.BanditsTrade {
    }
  }
  

  namespace edu.bu.met.cs665 {
    abstract class edu.bu.met.cs665.Computer {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.FactionsResources {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.FederationCaretaker {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.FederationMemento {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.FederationOriginator {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Game {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.IntroTutorial {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Outcasts {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.OutcastsAttack {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.OutcastsScavenge {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.OutcastsTrade {
    }
  }
  

  namespace edu.bu.met.cs665 {
    interface edu.bu.met.cs665.ScavengeBehavior {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.Sol {
    }
  }
  

  namespace edu.bu.met.cs665 {
    interface edu.bu.met.cs665.TradeBehavior {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.UltraWealthy {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.WealthyAttack {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.WealthyScavenge {
    }
  }
  

  namespace edu.bu.met.cs665 {
    class edu.bu.met.cs665.WealthyTrade {
    }
  }
  

  edu.bu.met.cs665.Bandits -up-|> edu.bu.met.cs665.Computer
  edu.bu.met.cs665.BanditsAttack .up.|> edu.bu.met.cs665.AttackBehavior
  edu.bu.met.cs665.BanditsScavenge .up.|> edu.bu.met.cs665.ScavengeBehavior
  edu.bu.met.cs665.BanditsTrade .up.|> edu.bu.met.cs665.TradeBehavior
  edu.bu.met.cs665.Computer o-- edu.bu.met.cs665.AttackBehavior : attackBehavior
  edu.bu.met.cs665.Computer o-- edu.bu.met.cs665.ScavengeBehavior : scavengeBehavior
  edu.bu.met.cs665.Computer o-- edu.bu.met.cs665.TradeBehavior : tradeBehavior
  edu.bu.met.cs665.Game -up-|> edu.bu.met.cs665.IntroTutorial
  edu.bu.met.cs665.Outcasts -up-|> edu.bu.met.cs665.Computer
  edu.bu.met.cs665.OutcastsAttack .up.|> edu.bu.met.cs665.AttackBehavior
  edu.bu.met.cs665.OutcastsScavenge .up.|> edu.bu.met.cs665.ScavengeBehavior
  edu.bu.met.cs665.OutcastsTrade .up.|> edu.bu.met.cs665.TradeBehavior
  edu.bu.met.cs665.UltraWealthy -up-|> edu.bu.met.cs665.Computer
  edu.bu.met.cs665.WealthyAttack .up.|> edu.bu.met.cs665.AttackBehavior
  edu.bu.met.cs665.WealthyScavenge .up.|> edu.bu.met.cs665.ScavengeBehavior
  edu.bu.met.cs665.WealthyTrade .up.|> edu.bu.met.cs665.TradeBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
